--- a/PokemonApi/app/src/main/res/layout/activity_main2.xml
+++ b/PokemonApi/app/src/main/res/layout/activity_main2.xml
@@ -5,59 +5,16 @@
     android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.labsoftware.pokemonapi.Main2Activity"
     android:background="@android:color/holo_blue_light">
 
     <TextView
-        android:text="HP:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="13dp"
-        android:id="@+id/textView4"
-        android:textColor="@android:color/background_light" />
-
-    <TextView
-        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView5"
         android:layout_alignBaseline="@+id/textView4"
         android:layout_alignBottom="@+id/textView4"
         android:layout_toEndOf="@+id/textView4"
-        android:textColor="@android:color/background_light" />
-
-    <ImageView
-        app:srcCompat="@android:drawable/btn_star"
-        android:layout_marginTop="20dp"
-        android:id="@+id/imageView2"
-        android:layout_below="@+id/textView3"
-        android:layout_alignEnd="@+id/textView5"
-        android:layout_height="60dp"
-        android:layout_width="100dp" />
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView3"
-        android:layout_alignEnd="@+id/textView6"
-        android:layout_marginTop="12dp"
-        android:id="@+id/textView7"
-        android:textColor="@android:color/background_light" />
-
-    <TextView
-        android:text="HP:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView7"
-        android:layout_toStartOf="@+id/textView7"
-        android:id="@+id/textView8"
         android:textColor="@android:color/background_light" />
 
     <ImageView
@@ -83,11 +40,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="13dp"
-        android:layout_marginTop="11dp"
         android:id="@+id/textView6"
         android:textColor="@android:color/background_light"
-        android:layout_below="@+id/textView5"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/textView5" />
 
     <TextView
         android:text="Batalla Pokémon"
@@ -99,7 +55,7 @@
         android:textColor="@android:color/background_light" />
 
     <TextView
-        android:text="Tu:"
+        android:text="Jugador:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView6"
@@ -116,20 +72,54 @@
         android:id="@+id/textView13"
         android:textColor="@android:color/background_light" />
 
+    <ImageView
+        app:srcCompat="@android:drawable/btn_star"
+        android:layout_marginTop="0dp"
+        android:id="@+id/imageView2"
+        android:layout_height="150dp"
+        android:layout_width="150dp"
+        android:layout_below="@+id/textView3"
+        android:layout_toEndOf="@+id/textView3" />
+
+    <ImageView
+        app:srcCompat="@android:drawable/btn_star"
+        android:id="@+id/imageView3"
+        android:layout_height="150dp"
+        android:layout_width="150dp"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="HP:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView8"
+        android:textColor="@android:color/background_light"
+        android:layout_below="@+id/imageView3"
+        android:layout_alignStart="@+id/textView12" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView7"
+        android:textColor="@android:color/background_light"
+        android:layout_below="@+id/imageView3"
+        android:layout_toEndOf="@+id/textView8" />
+
     <Button
         android:text="Atacar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnataca"
-        android:layout_below="@+id/textView8"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignStart="@+id/imageView2" />
 
-    <ImageView
-        app:srcCompat="@android:drawable/btn_star"
-        android:layout_marginTop="20dp"
-        android:id="@+id/imageView3"
-        android:layout_height="60dp"
-        android:layout_width="100dp"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentEnd="true" />
+    <TextView
+        android:text="HP:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView4"
+        android:textColor="@android:color/background_light"
+        android:layout_below="@+id/imageView2"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
